--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               alt="Danish kode monkey logo" />
           </div>
         </div>
-        <div class="title-hero logo-container">Coffee lovers unite!</div>
+        <div class="title-hero logo-container"><p>Coffee lovers unite!</p></div>
         <div class="image-credit">
           <h6>
             Photo by
@@ -50,64 +50,66 @@
       <div class="content-container">
         <div class="content-text">
           <p>
-            This is <i>not</i> a real online service!<br />
-            You know you love coffee, we know you love coffee!<br />
+            This is <i>not</i> a real online service! You know you love coffee,
+            we know you love coffee!<br />
             let's love coffee together!<br />
             Sign up <i>now</i> to get started <br /><br />
             You <i>know</i> you want to.
           </p>
         </div>
-        <form class="form-container">
-          <legend><h2>Let's do this!</h2></legend>
-          <fieldset>
-            <div class="input">
-              <label for="first_name">FIRST NAME:</label>
-              <input
-                type="text"
-                id="first_name"
-                name="first_name" />
-            </div>
-            <div class="input">
-              <label for="last_name">LAST NAME:</label>
-              <input
-                type="text"
-                id="last_name"
-                name="last_name" />
-            </div>
-          </fieldset>
-          <fieldset>
-            <div class="input">
-              <label for="user_email">EMAIL:</label>
-              <input
-                type="email"
-                id="user_email"
-                name="user_email" />
-            </div>
-            <div class="input">
-              <label for="phone_number">PHONE NUMBER:</label>
-              <input
-                type="tel"
-                id="phone_number"
-                name="phone_number"
-                pattern="[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]" />
-            </div>
-          </fieldset>
-          <fieldset>
-            <div class="input">
-              <label for="user_pwd">PASSWORD:</label>
-              <input
-                type="password"
-                id="user_pwd"
-                name="user_pwd" />
-            </div>
-            <div class="input">
-              <label for="confPwd">CONFIRM PASSWORD:</label>
-              <input
-                type="password"
-                id="user_confPwd" />
-            </div>
-          </fieldset>
-        </form>
+        <div class="form-container">
+          <form>
+            <legend><h2>Let's do this!</h2></legend>
+            <fieldset>
+              <div class="input">
+                <label for="first_name">FIRST NAME:</label>
+                <input
+                  type="text"
+                  id="first_name"
+                  name="first_name" />
+              </div>
+              <div class="input">
+                <label for="last_name">LAST NAME:</label>
+                <input
+                  type="text"
+                  id="last_name"
+                  name="last_name" />
+              </div>
+            </fieldset>
+            <fieldset>
+              <div class="input">
+                <label for="user_email">EMAIL:</label>
+                <input
+                  type="email"
+                  id="user_email"
+                  name="user_email" />
+              </div>
+              <div class="input">
+                <label for="phone_number">PHONE NUMBER:</label>
+                <input
+                  type="tel"
+                  id="phone_number"
+                  name="phone_number"
+                  pattern="[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]" />
+              </div>
+            </fieldset>
+            <fieldset>
+              <div class="input">
+                <label for="user_pwd">PASSWORD:</label>
+                <input
+                  type="password"
+                  id="user_pwd"
+                  name="user_pwd" />
+              </div>
+              <div class="input">
+                <label for="confPwd">CONFIRM PASSWORD:</label>
+                <input
+                  type="password"
+                  id="user_confPwd" />
+              </div>
+            </fieldset>
+          </form>
+        </div>
         <div class="content-bottom">
           <button>Create Account</button>
           <p>Already have an account? <a href="">Log in</a></p>
