The form is a lie
Its not a real form, it looks like a form, but it is not a form. Form.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
         <div class="content-bottom">
           <button
             type="submit"
-            id="form-button">
+            id="form-button"
+            onclick="formWasALie()">
             Create Account
           </button>
           <p>Already have an account? <a href="">Log in</a></p>
